dkk.output
Grammar

    0 $accept: program $end

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | ε

    4 global_declaration: typedef_declaration
    5                   | const_declaration
    6                   | class_declaration
    7                   | union_declaration
    8                   | global_var_declaration
    9                   | func_declaration

   10 typedef_declaration: TYPEDEF typename listspec ID dims SEMI

   11 typename: standard_type
   12         | ID

   13 standard_type: CHAR
   14              | INT
   15              | FLOAT
   16              | VOID

   17 listspec: LIST
   18         | ε

   19 dims: dims dim
   20     | ε

   21 dim: LBRACK ICONST RBRACK
   22    | LBRACK RBRACK

   23 const_declaration: CONST typename constdefs SEMI

   24 constdefs: constdefs COMMA constdef
   25          | constdef

   26 constdef: ID dims ASSIGN init_value

   27 init_value: expression
   28           | LBRACE init_values RBRACE
   29           | STRING

   30 expression: expression OROP expression
   31           | expression ANDOP expression
   32           | expression EQUOP expression
   33           | expression RELOP expression
   34           | expression ADDOP expression
   35           | expression MULOP expression
   36           | NOTOP expression
   37           | ADDOP expression
   38           | SIZEOP expression
   39           | INCDEC variable
   40           | variable INCDEC
   41           | variable
   42           | variable LPAREN expression_list RPAREN
   43           | LENGTH LPAREN general_expression RPAREN
   44           | NEW LPAREN general_expression RPAREN
   45           | constant
   46           | LPAREN general_expression RPAREN
   47           | LPAREN standard_type RPAREN
   48           | listexpression

   49 variable: variable LBRACK general_expression RBRACK
   50         | variable DOT ID
   51         | LISTFUNC LPAREN general_expression RPAREN
   52         | decltype ID
   53         | THIS

   54 general_expression: general_expression COMMA general_expression
   55                   | assignment

   56 assignment: variable ASSIGN assignment
   57           | variable ASSIGN STRING
   58           | expression

   59 expression_list: general_expression
   60                | ε

   61 constant: CCONST
   62         | ICONST
   63         | FCONST

   64 listexpression: LBRACK expression_list RBRACK

   65 init_values: init_values COMMA init_value
   66            | init_value

   67 class_declaration: CLASS ID class_body SEMI

   68 class_body: parent LBRACE members_methods RBRACE

   69 parent: COLON ID
   70       | ε

   71 members_methods: members_methods access member_or_method
   72                | access member_or_method

   73 access: PRIVATE COLON
   74       | PROTECTED COLON
   75       | PUBLIC COLON
   76       | ε

   77 member_or_method: member
   78                 | method

   79 member: var_declaration
   80       | anonymous_union

   81 var_declaration: typename variabledefs SEMI

   82 variabledefs: variabledefs COMMA variabledef
   83             | variabledef

   84 variabledef: LIST ID dims
   85            | ID dims

   86 anonymous_union: UNION union_body SEMI

   87 union_body: LBRACE fields RBRACE

   88 fields: fields field
   89       | field

   90 field: var_declaration

   91 method: short_func_declaration

   92 short_func_declaration: short_par_func_header SEMI
   93                       | nopar_func_header SEMI

   94 short_par_func_header: func_header_start LPAREN parameter_types RPAREN

   95 func_header_start: typename ID
   96                  | LIST ID

   97 parameter_types: parameter_types COMMA typename pass_list_dims
   98                | typename pass_list_dims

   99 pass_list_dims: listspec dims
  100               | REFER

  101 nopar_func_header: func_header_start LPAREN RPAREN

  102 union_declaration: UNION ID union_body SEMI

  103 global_var_declaration: typename init_variabledefs SEMI

  104 init_variabledefs: init_variabledefs COMMA init_variabledef
  105                  | init_variabledef

  106 init_variabledef: variabledef initializer

  107 initializer: ASSIGN init_value
  108            | ε

  109 func_declaration: short_func_declaration
  110                 | full_func_declaration

  111 full_func_declaration: full_par_func_header LBRACE decl_statements RBRACE
  112                      | nopar_class_func_header LBRACE decl_statements RBRACE
  113                      | nopar_func_header LBRACE decl_statements RBRACE

  114 full_par_func_header: class_func_header_start LPAREN parameter_list RPAREN
  115                     | func_header_start LPAREN parameter_list RPAREN

  116 class_func_header_start: typename func_class ID
  117                        | LIST func_class ID

  118 func_class: ID METH

  119 parameter_list: parameter_list COMMA typename pass_variabledef
  120               | typename pass_variabledef

  121 pass_variabledef: variabledef
  122                 | REFER ID

  123 nopar_class_func_header: class_func_header_start LPAREN RPAREN

  124 decl_statements: declarations statements
  125                | declarations
  126                | statements
  127                | ε

  128 declarations: declarations decltype typename variabledefs SEMI
  129             | decltype typename variabledefs SEMI

  130 decltype: STATIC
  131         | ε

  132 statements: statements statement
  133           | statement

  134 statement: expression_statement
  135          | if_statement
  136          | while_statement
  137          | for_statement
  138          | return_statement
  139          | io_statement
  140          | comp_statement
  141          | CONTINUE SEMI
  142          | BREAK SEMI
  143          | SEMI

  144 expression_statement: general_expression SEMI

  145 if_statement: IF LPAREN general_expression RPAREN statement
  146             | IF LPAREN general_expression RPAREN statement ELSE statement

  147 while_statement: WHILE LPAREN general_expression RPAREN statement

  148 for_statement: FOR LPAREN optexpr SEMI optexpr SEMI optexpr RPAREN statement

  149 optexpr: general_expression
  150        | ε

  151 return_statement: RETURN optexpr SEMI

  152 io_statement: CIN INP in_list SEMI
  153             | COUT OUT out_list SEMI

  154 in_list: in_list INP in_item
  155        | in_item

  156 in_item: variable

  157 out_list: out_list OUT out_item
  158         | out_item

  159 out_item: general_expression
  160         | STRING

  161 comp_statement: LBRACE decl_statements RBRACE

  162 main_function: main_header LBRACE decl_statements RBRACE

  163 main_header: INT MAIN LPAREN RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPEDEF (258) 10
    CHAR (259) 13
    INT (260) 14 163
    FLOAT (261) 15
    CONST (262) 23
    UNION (263) 86 102
    CLASS (264) 67
    PRIVATE (265) 73
    PROTECTED (266) 74
    PUBLIC (267) 75
    STATIC (268) 130
    VOID (269) 16
    LIST (270) 17 84 96 117
    CONTINUE (271) 141
    BREAK (272) 142
    THIS (273) 53
    IF (274) 145 146
    ELSE (275) 146
    WHILE (276) 147
    FOR (277) 148
    RETURN (278) 151
    LENGTH (279) 43
    NEW (280) 44
    CIN (281) 152
    COUT (282) 153
    MAIN (283) 163
    ICONST (284) 21 62
    FCONST (285) 63
    CCONST (286) 61
    OROP (287) 30
    ANDOP (288) 31
    EQUOP (289) 32
    RELOP (290) 33
    ADDOP (291) 34 37
    MULOP (292) 35
    NOTOP (293) 36
    INCDEC (294) 39 40
    SIZEOP (295) 38
    LISTFUNC (296) 51
    STRING (297) 29 57 160
    LPAREN (298) 42 43 44 46 47 51 94 101 114 115 123 145 146 147 148 163
    RPAREN (299) 42 43 44 46 47 51 94 101 114 115 123 145 146 147 148 163
    SEMI (300) 10 23 67 81 86 92 93 102 103 128 129 141 142 143 144 148 151 152 153
    DOT (301) 50
    COMMA (302) 24 54 65 82 97 104 119
    ASSIGN (303) 26 56 57 107
    COLON (304) 69 73 74 75
    LBRACK (305) 21 22 49 64
    RBRACK (306) 21 22 49 64
    REFER (307) 100 122
    LBRACE (308) 28 68 87 111 112 113 161 162
    RBRACE (309) 28 68 87 111 112 113 161 162
    METH (310) 118
    INP (311) 152 154
    OUT (312) 153 157
    ID (313) 10 12 26 50 52 67 69 84 85 95 96 102 116 117 118 122
    LOWER_THAN_ELSE (314)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program (61)
        on left: 1
        on right: 0
    global_declarations (62)
        on left: 2 3
        on right: 1 2
    global_declaration (63)
        on left: 4 5 6 7 8 9
        on right: 2
    typedef_declaration (64)
        on left: 10
        on right: 4
    typename <ival> (65)
        on left: 11 12
        on right: 10 23 81 95 97 98 103 116 119 120 128 129
    standard_type <ival> (66)
        on left: 13 14 15 16
        on right: 11 47
    listspec (67)
        on left: 17 18
        on right: 10 99
    dims (68)
        on left: 19 20
        on right: 10 19 26 84 85 99
    dim (69)
        on left: 21 22
        on right: 19
    const_declaration (70)
        on left: 23
        on right: 5
    constdefs (71)
        on left: 24 25
        on right: 23 24
    constdef (72)
        on left: 26
        on right: 24 25
    init_value (73)
        on left: 27 28 29
        on right: 26 65 66 107
    expression <myexpr> (74)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 27 30 31 32 33 34 35 36 37 38 58
    variable <ival> (75)
        on left: 49 50 51 52 53
        on right: 39 40 41 42 49 50 56 57 156
    general_expression (76)
        on left: 54 55
        on right: 43 44 46 49 51 54 59 144 145 146 147 149 159
    assignment (77)
        on left: 56 57 58
        on right: 55 56
    expression_list (78)
        on left: 59 60
        on right: 42 64
    constant <type> (79)
        on left: 61 62 63
        on right: 45
    listexpression (80)
        on left: 64
        on right: 48
    init_values (81)
        on left: 65 66
        on right: 28 65
    class_declaration (82)
        on left: 67
        on right: 6
    class_body (83)
        on left: 68
        on right: 67
    parent (84)
        on left: 69 70
        on right: 68
    members_methods (85)
        on left: 71 72
        on right: 68 71
    access (86)
        on left: 73 74 75 76
        on right: 71 72
    member_or_method (87)
        on left: 77 78
        on right: 71 72
    member (88)
        on left: 79 80
        on right: 77
    var_declaration (89)
        on left: 81
        on right: 79 90
    variabledefs <idlist> (90)
        on left: 82 83
        on right: 81 82 128 129
    variabledef <str> (91)
        on left: 84 85
        on right: 82 83 106 121
    anonymous_union (92)
        on left: 86
        on right: 80
    union_body (93)
        on left: 87
        on right: 86 102
    fields (94)
        on left: 88 89
        on right: 87 88
    field (95)
        on left: 90
        on right: 88 89
    method (96)
        on left: 91
        on right: 78
    short_func_declaration (97)
        on left: 92 93
        on right: 91 109
    short_par_func_header (98)
        on left: 94
        on right: 92
    func_header_start (99)
        on left: 95 96
        on right: 94 101 115
    parameter_types (100)
        on left: 97 98
        on right: 94 97
    pass_list_dims (101)
        on left: 99 100
        on right: 97 98
    nopar_func_header (102)
        on left: 101
        on right: 93 113
    union_declaration (103)
        on left: 102
        on right: 7
    global_var_declaration (104)
        on left: 103
        on right: 8
    init_variabledefs <idlist> (105)
        on left: 104 105
        on right: 103 104
    init_variabledef <str> (106)
        on left: 106
        on right: 104 105
    initializer (107)
        on left: 107 108
        on right: 106
    func_declaration (108)
        on left: 109 110
        on right: 9
    full_func_declaration (109)
        on left: 111 112 113
        on right: 110
    full_par_func_header (110)
        on left: 114 115
        on right: 111
    class_func_header_start (111)
        on left: 116 117
        on right: 114 123
    func_class (112)
        on left: 118
        on right: 116 117
    parameter_list (113)
        on left: 119 120
        on right: 114 115 119
    pass_variabledef (114)
        on left: 121 122
        on right: 119 120
    nopar_class_func_header (115)
        on left: 123
        on right: 112
    decl_statements (116)
        on left: 124 125 126 127
        on right: 111 112 113 161 162
    declarations (117)
        on left: 128 129
        on right: 124 125 128
    decltype (118)
        on left: 130 131
        on right: 52 128 129
    statements (119)
        on left: 132 133
        on right: 124 126 132
    statement (120)
        on left: 134 135 136 137 138 139 140 141 142 143
        on right: 132 133 145 146 147 148
    expression_statement (121)
        on left: 144
        on right: 134
    if_statement (122)
        on left: 145 146
        on right: 135
    while_statement (123)
        on left: 147
        on right: 136
    for_statement (124)
        on left: 148
        on right: 137
    optexpr (125)
        on left: 149 150
        on right: 148 151
    return_statement (126)
        on left: 151
        on right: 138
    io_statement (127)
        on left: 152 153
        on right: 139
    in_list (128)
        on left: 154 155
        on right: 152 154
    in_item (129)
        on left: 156
        on right: 154 155
    out_list (130)
        on left: 157 158
        on right: 153 157
    out_item (131)
        on left: 159 160
        on right: 157 158
    comp_statement (132)
        on left: 161
        on right: 140
    main_function (133)
        on left: 162
        on right: 1
    main_header (134)
        on left: 163
        on right: 162


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: global_declarations • main_function
    2 global_declarations: global_declarations • global_declaration

    TYPEDEF  shift, and go to state 4
    CHAR     shift, and go to state 5
    INT      shift, and go to state 6
    FLOAT    shift, and go to state 7
    CONST    shift, and go to state 8
    UNION    shift, and go to state 9
    CLASS    shift, and go to state 10
    VOID     shift, and go to state 11
    LIST     shift, and go to state 12
    ID       shift, and go to state 13

    global_declaration       go to state 14
    typedef_declaration      go to state 15
    typename                 go to state 16
    standard_type            go to state 17
    const_declaration        go to state 18
    class_declaration        go to state 19
    short_func_declaration   go to state 20
    short_par_func_header    go to state 21
    func_header_start        go to state 22
    nopar_func_header        go to state 23
    union_declaration        go to state 24
    global_var_declaration   go to state 25
    func_declaration         go to state 26
    full_func_declaration    go to state 27
    full_par_func_header     go to state 28
    class_func_header_start  go to state 29
    nopar_class_func_header  go to state 30
    main_function            go to state 31
    main_header              go to state 32


State 3

    0 $accept: program $end •

    $default  accept


State 4

   10 typedef_declaration: TYPEDEF • typename listspec ID dims SEMI

    CHAR   shift, and go to state 5
    INT    shift, and go to state 33
    FLOAT  shift, and go to state 7
    VOID   shift, and go to state 11
    ID     shift, and go to state 13

    typename       go to state 34
    standard_type  go to state 17


State 5

   13 standard_type: CHAR •

    $default  reduce using rule 13 (standard_type)


State 6

   14 standard_type: INT •
  163 main_header: INT • MAIN LPAREN RPAREN

    MAIN  shift, and go to state 35

    $default  reduce using rule 14 (standard_type)


State 7

   15 standard_type: FLOAT •

    $default  reduce using rule 15 (standard_type)


State 8

   23 const_declaration: CONST • typename constdefs SEMI

    CHAR   shift, and go to state 5
    INT    shift, and go to state 33
    FLOAT  shift, and go to state 7
    VOID   shift, and go to state 11
    ID     shift, and go to state 13

    typename       go to state 36
    standard_type  go to state 17


State 9

  102 union_declaration: UNION • ID union_body SEMI

    ID  shift, and go to state 37


State 10

   67 class_declaration: CLASS • ID class_body SEMI

    ID  shift, and go to state 38


State 11

   16 standard_type: VOID •

    $default  reduce using rule 16 (standard_type)


State 12

   96 func_header_start: LIST • ID
  117 class_func_header_start: LIST • func_class ID

    ID  shift, and go to state 39

    func_class  go to state 40


State 13

   12 typename: ID •

    $default  reduce using rule 12 (typename)


State 14

    2 global_declarations: global_declarations global_declaration •

    $default  reduce using rule 2 (global_declarations)


State 15

    4 global_declaration: typedef_declaration •

    $default  reduce using rule 4 (global_declaration)


State 16

   95 func_header_start: typename • ID
  103 global_var_declaration: typename • init_variabledefs SEMI
  116 class_func_header_start: typename • func_class ID

    LIST  shift, and go to state 41
    ID    shift, and go to state 42

    variabledef        go to state 43
    init_variabledefs  go to state 44
    init_variabledef   go to state 45
    func_class         go to state 46


State 17

   11 typename: standard_type •

    $default  reduce using rule 11 (typename)


State 18

    5 global_declaration: const_declaration •

    $default  reduce using rule 5 (global_declaration)


State 19

    6 global_declaration: class_declaration •

    $default  reduce using rule 6 (global_declaration)


State 20

  109 func_declaration: short_func_declaration •

    $default  reduce using rule 109 (func_declaration)


State 21

   92 short_func_declaration: short_par_func_header • SEMI

    SEMI  shift, and go to state 47


State 22

   94 short_par_func_header: func_header_start • LPAREN parameter_types RPAREN
  101 nopar_func_header: func_header_start • LPAREN RPAREN
  115 full_par_func_header: func_header_start • LPAREN parameter_list RPAREN

    LPAREN  shift, and go to state 48


State 23

   93 short_func_declaration: nopar_func_header • SEMI
  113 full_func_declaration: nopar_func_header • LBRACE decl_statements RBRACE

    SEMI    shift, and go to state 49
    LBRACE  shift, and go to state 50


State 24

    7 global_declaration: union_declaration •

    $default  reduce using rule 7 (global_declaration)


State 25

    8 global_declaration: global_var_declaration •

    $default  reduce using rule 8 (global_declaration)


State 26

    9 global_declaration: func_declaration •

    $default  reduce using rule 9 (global_declaration)


State 27

  110 func_declaration: full_func_declaration •

    $default  reduce using rule 110 (func_declaration)


State 28

  111 full_func_declaration: full_par_func_header • LBRACE decl_statements RBRACE

    LBRACE  shift, and go to state 51


State 29

  114 full_par_func_header: class_func_header_start • LPAREN parameter_list RPAREN
  123 nopar_class_func_header: class_func_header_start • LPAREN RPAREN

    LPAREN  shift, and go to state 52


State 30

  112 full_func_declaration: nopar_class_func_header • LBRACE decl_statements RBRACE

    LBRACE  shift, and go to state 53


State 31

    1 program: global_declarations main_function •

    $default  reduce using rule 1 (program)


State 32

  162 main_function: main_header • LBRACE decl_statements RBRACE

    LBRACE  shift, and go to state 54


State 33

   14 standard_type: INT •

    $default  reduce using rule 14 (standard_type)


State 34

   10 typedef_declaration: TYPEDEF typename • listspec ID dims SEMI

    LIST  shift, and go to state 55

    $default  reduce using rule 18 (listspec)

    listspec  go to state 56


State 35

  163 main_header: INT MAIN • LPAREN RPAREN

    LPAREN  shift, and go to state 57


State 36

   23 const_declaration: CONST typename • constdefs SEMI

    ID  shift, and go to state 58

    constdefs  go to state 59
    constdef   go to state 60


State 37

  102 union_declaration: UNION ID • union_body SEMI

    LBRACE  shift, and go to state 61

    union_body  go to state 62


State 38

   67 class_declaration: CLASS ID • class_body SEMI

    COLON  shift, and go to state 63

    $default  reduce using rule 70 (parent)

    class_body  go to state 64
    parent      go to state 65


State 39

   96 func_header_start: LIST ID •
  118 func_class: ID • METH

    METH  shift, and go to state 66

    $default  reduce using rule 96 (func_header_start)


State 40

  117 class_func_header_start: LIST func_class • ID

    ID  shift, and go to state 67


State 41

   84 variabledef: LIST • ID dims

    ID  shift, and go to state 68


State 42

   85 variabledef: ID • dims
   95 func_header_start: typename ID •
  118 func_class: ID • METH

    METH  shift, and go to state 66

    LPAREN    reduce using rule 95 (func_header_start)
    $default  reduce using rule 20 (dims)

    dims  go to state 69


State 43

  106 init_variabledef: variabledef • initializer

    ASSIGN  shift, and go to state 70

    $default  reduce using rule 108 (initializer)

    initializer  go to state 71


State 44

  103 global_var_declaration: typename init_variabledefs • SEMI
  104 init_variabledefs: init_variabledefs • COMMA init_variabledef

    SEMI   shift, and go to state 72
    COMMA  shift, and go to state 73


State 45

  105 init_variabledefs: init_variabledef •

    $default  reduce using rule 105 (init_variabledefs)


State 46

  116 class_func_header_start: typename func_class • ID

    ID  shift, and go to state 74


State 47

   92 short_func_declaration: short_par_func_header SEMI •

    $default  reduce using rule 92 (short_func_declaration)


State 48

   94 short_par_func_header: func_header_start LPAREN • parameter_types RPAREN
  101 nopar_func_header: func_header_start LPAREN • RPAREN
  115 full_par_func_header: func_header_start LPAREN • parameter_list RPAREN

    CHAR    shift, and go to state 5
    INT     shift, and go to state 33
    FLOAT   shift, and go to state 7
    VOID    shift, and go to state 11
    RPAREN  shift, and go to state 75
    ID      shift, and go to state 13

    typename         go to state 76
    standard_type    go to state 17
    parameter_types  go to state 77
    parameter_list   go to state 78


State 49

   93 short_func_declaration: nopar_func_header SEMI •

    $default  reduce using rule 93 (short_func_declaration)


State 50

  113 full_func_declaration: nopar_func_header LBRACE • decl_statements RBRACE
